Solving save and improving DOM manipulation